css/main-style.css
*, *::before, *::after {box-sizing: border-box;}
*:focus {outline: none;}

:root {
    --body-bg-c: #5F5F5F;
    --infobg-c: #333333;
    --btnbg-c: #eeeeee;
    --btninactive-c: #444444;
    --txt-c: #ffffff;
    --txtinv-c: #000000;
    --txtbg-c: #eeeeee;
    --px1border: 1px solid black;
    --icon-size: 56px;
}

body {
    background: var(--body-bg-c);
    font-family: "Josefin Sans", sans-serif;
    font-optical-sizing: auto;
    color: white;
    max-width: 1200px;
    margin: 0 auto;
}

body > nav {
    display: flex;
    justify-content: space-around;
    padding-top: 8px;
}

body > nav > button {
    background: none;
    border: none;
    font-family: inherit;
    font-size: 24px;
    font-weight: 700;
    color: white;
    text-transform: uppercase;
    height: calc(var(--box-size) / 2);
    white-space: pre-wrap;
    cursor: pointer;
    padding: 8px 16px 4px;
}

body > nav > button.mode-toggle.selected {
    border-radius: 4px 4px 0 0;
    background: var(--infobg-c);
    color: white;
}

label.has-icon::before{ filter: invert(); }

.text-changes::after { content:attr(data-shorttext) "\a" attr(data-longtext); white-space: pre;}
body > nav > button.text-changes::after { content: attr(data-longtext); }

button#burger {
    width: var(--icon-size);
    height: var(--icon-size);
    /* aspect-ratio: 8/5; */
    --_g: no-repeat radial-gradient(#000 68%,#0000 71%);
    mask: var(--_g),var(--_g),var(--_g);
    mask-size: 24% 24%;
    mask-position: 4% 50%, 50% 50%, 96% 50%;
    background: white;
    transition: mask-position 0.125s;
}

button#burger.clicked { mask-position: 50% 96%, 50% 50%, 50% 4%; } 

pre {
    padding: 0.5em;
    font-family: monospace;
    color: black;
    width: 100%;
    background: rgba(255,255,255,0.4);
    font-size: 1.25em;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
}

#site-icon {
    width: var(--icon-size);
    height: var(--icon-size);
    filter: grayscale() invert();
}

@media screen and (max-width: 865px) {
    :root { --icon-size: 32px; }

    body > nav {padding: 4px 4px 0 4px; }
    body > nav > button { font-size: 20px; padding: 4px 8px 4px; flex-grow: 1;}
    .region-control { font-size: 12px; }
    
    body > nav > button.text-changes::after, .text-changes::after { content:attr(data-shorttext); }

    
    

    /* #site-icon { display: none;}s */
}

